--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,11 +25,11 @@ jobs:
 
       - uses: docker/setup-qemu-action@v2
 
-      - name: Login docker hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_PUSH_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PUSH_TOKEN }}
+      # - name: Login docker hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_PUSH_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_PUSH_TOKEN }}
       
       - name: Login registry.smtx.io
         uses: docker/login-action@v2
@@ -42,7 +42,6 @@ jobs:
         with:
           file: build/images/release/Dockerfile
           tags: |
-            everoute/release:${{ env.IMAGE_TAG }}
             registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
           platforms: linux/amd64,linux/arm64
           push: true
