--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,25 +29,25 @@ jobs:
   pr-check:
     needs: [build-unit-test-image]
     runs-on: [self-hosted, pod]
+    strategy:
+      matrix:
+        act: [docker-test-ci, docker-race-test-ci, docker-cover-test-ci]
     steps:
       - uses: actions/checkout@v2
 
       - name: run everoute unit test
-        run: |
-          make docker-test-ci
-          make docker-race-test-ci
-          make docker-cover-test-ci
+        run: make ${{ matrix.act }}
       - uses: codecov/codecov-action@v2
         with:
           files: ./coverage.out
 
   static-check:
-    runs-on: [ubuntu-20.04]
+    runs-on: [self-hosted, pod]
     if: ${{ github.event_name == 'pull_request' }}
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.17'
+          go-version: '1.20'
 
       - uses: actions/checkout@v2
 
@@ -60,19 +60,19 @@ jobs:
       - name: Check golang lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.48.0
+          version: v1.60.1
           only-new-issues: true
           # skip cache because of flaky behaviors
           skip-build-cache: true
           skip-pkg-cache: true
 
   run-e2e:
-    runs-on: [ubuntu-20.04]
+    runs-on: [self-hosted, pod]
     steps:
       - uses: actions/checkout@v2
 
       - name: run everoute e2e test
-        run: sudo make docker-e2e-test
+        run: sudo make docker-e2e-test-ci
   
   build-k8s-e2e-image:
     runs-on: [self-hosted, build]
@@ -88,12 +88,12 @@ jobs:
           push: true
 
   generate-check:
-    runs-on: [ubuntu-20.04]
+    runs-on: [self-hosted, pod]
     steps:
       - uses: actions/checkout@v2
 
-      - name: make docker-generate
-        run: sudo sh -c "make image-generate && make docker-generate"
+      - name: make docker-generate-ci
+        run: sudo sh -c "make docker-generate-ci"
 
       - name: check if code changes
         run: sudo sh -c "git add -A && git diff HEAD --exit-code"
