feat: k8scluster api add spec.controlplaneavailabel

--- a/deploy/chart/templates/crds/pod.everoute.io_k8sclusters.yaml
+++ b/deploy/chart/templates/crds/pod.everoute.io_k8sclusters.yaml
@@ -44,6 +44,8 @@ spec:
               cni:
                 description: K8sClusterCNIType is cni type.
                 type: string
+              controlPlaneAvailabel:
+                type: boolean
               managedBy:
                 description: K8sClusterManagedPlatform the platform that a k8scluster
                   managedby.
@@ -60,6 +62,7 @@ spec:
                 type: object
             required:
             - cni
+            - controlPlaneAvailabel
             - managedBy
             type: object
         required:
