fix: er-868 ip migrate in multi nics of one vm won't generate an alarm

--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -977,6 +977,9 @@ spec:
     - jsonPath: .spec.extendLabels
       name: EXTEND-LABELS
       type: string
+    - jsonPath: .spec.vmID
+      name: VMID
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
@@ -1064,6 +1067,8 @@ spec:
                 description: VID describe the endpoint in which VLAN
                 format: int32
                 type: integer
+              vmID:
+                type: string
             required:
             - reference
             - vid
