fix: er-868 ip migrate in multi nics of one vm won't generate an alarm

--- a/deploy/chart/templates/crds/security.everoute.io_endpoints.yaml
+++ b/deploy/chart/templates/crds/security.everoute.io_endpoints.yaml
@@ -116,6 +116,8 @@ spec:
                 description: VID describe the endpoint in which VLAN
                 format: int32
                 type: integer
+              vmID:
+                type: string
             required:
             - reference
             - vid
