--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1064,6 +1064,8 @@ spec:
                 description: VID describe the endpoint in which VLAN
                 format: int32
                 type: integer
+              vmID:
+                type: string
             required:
             - reference
             - vid
