fix(cni): er-912 cni doesn't use pkt mark to store ovs port number, pick for cni branch 1.0.x

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -177,7 +177,7 @@ jobs:
       - name: run ServiceProxy cases
         if: matrix.enable-proxy == true
         timeout-minutes: 20
-        run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|IPv6|Networking|rejected|PublishNotReadyAddresses|unready" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+        run: ./k8se2e/bin/ginkgo -nodes=5 --skip="NodePort|SCTP|hairpin|ProxyTerminatingEndpoints|IPv6|Networking|rejected|PublishNotReadyAddresses|unready|ServiceInternalTrafficPolicy" --focus="Services" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
       - name: run NetworkPolicy case
         timeout-minutes: 30
